<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a3cccc"
    tools:context="org.jesperancinha.matrixanywhere.MatrixActivity"
    tools:ignore="MergeRootFrame">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TableRow android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="60dp">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/textView"
                    android:singleLine="false"
                    android:text="@string/welcome_message"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:layout_span="2"
                    android:background="@drawable/text_style"
                    />
            </TableRow>
            <TableRow android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:id="@+id/tableMatrix"
                        android:background="#000000"
                        android:layout_weight="1"/>
            </TableRow>

            <TableRow android:layout_width="fill_parent"
            android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:id="@+id/tableControl"
                    android:gravity="bottom"
                    android:layout_below="@+id/tableMatrix">

                    <TableRow
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:id="@+id/buttonCalculate"
                            android:text="@string/calculate_text"
                            android:layout_weight="1"
                            android:background="@drawable/btn_bkgrnd_def"/>
                    </TableRow>

                    <TableRow
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/buttonReturn"
                            android:layout_weight="1"
                            android:text="@string/return_text"
                            android:background="@drawable/btn_bkgrnd_def"/>
                    </TableRow>

                    <TableRow
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:id="@+id/labelResult"
                            android:text="@string/result"
                            android:layout_weight="0"
                            android:textColor="#000000"
                            android:background="@drawable/text_style"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textAlignment="center"
                            android:gravity="center_horizontal|center_vertical"
                            android:id="@+id/textResult"
                            android:text="@string/result_will_appear_here"
                            android:textColor="#000000"
                            android:layout_weight="1"
                            android:background="@drawable/text_style"/>
                    </TableRow>

                </TableLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

</FrameLayout>
