<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a3cccc"
    tools:context="org.jesperancinha.matrixanywhere.MatrixAnywhereMainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center" />
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btnExit"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:collapseColumns="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="60dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/textViewTitle"
                    android:singleLine="false"
                    android:text="@string/welcome_message"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:layout_span="2"
                    android:background="@drawable/text_style" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView"
                    android:singleLine="true"
                    android:text="@string/number_of_rows"
                    android:textColor="#000000"
                    android:layout_column="0"
                    android:layout_weight="0"
                    android:background="@drawable/text_style" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/editRows"
                    android:textColor="#000000"
                    android:singleLine="true"
                    android:inputType="number"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:minHeight="30dp"
                    android:background="@drawable/edit_style"

                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/number_of_columns"
                    android:id="@+id/textView2"
                    android:textColor="#000000"
                    android:layout_weight="0"
                    android:layout_column="0"
                    android:background="@drawable/text_style" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editColumns"
                    android:layout_column="1"
                    android:inputType="none"
                    android:paddingLeft="10dp"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:minHeight="30dp"
                    android:background="@drawable/text_style" />
            </TableRow>


        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="138dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/submit_text"
                    android:id="@+id/buttonSubmit"
                    android:layout_gravity="center"
                    android:layout_span="1"
                    android:layout_column="0"
                    android:background="@drawable/btn_bkgrnd_def"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>

    </FrameLayout>

</FrameLayout>
